fixed horizontal scrolling on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,20 @@
 @import url('https://fonts.googleapis.com/css2?family=Darker+Grotesque:wght@800&display=swap');
 
+html, body{
+  
+  overflow-x: hidden;
+  
+}
+
+
 body {
   margin: 0;
   font-family: 'Darker Grotesque', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: #1e1a2b;
-  overflow-x: hidden;
+  position: relative;
+  overflow-y: hidden;
 }
 
 
